<layout xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="register"
            type="com.example.bookstore.viewmodel.RegisterVM" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/Whitesmoke"
         android:orientation="vertical">

     <include layout="@layout/white_toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical"
            >

            <!--<androidx.appcompat.widget.LinearLayoutCompat-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/uao_tab_bg"-->
                <!--android:orientation="vertical">-->



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="0dp"
                    android:layout_marginStart="-5dp"
                    android:layout_marginEnd="-5dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/twenty_dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/AppTheme.TextInputLayout"
                            app:hintEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:hint="@string/lang_name"
                                android:singleLine="true"
                                android:imeOptions="actionNext"
                                android:digits="@string/character_digits"
                                android:textColor="@color/textinput_text_color"
                                android:inputType="text|textNoSuggestions"/>

                        </com.google.android.material.textfield.TextInputLayout>




                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/fifteen_dp"
                                app:prefixText="+91 | "
                                app:prefixTextColor="@color/Black"
                                app:prefixTextAppearance="@style/MobileTextInput"
                                app:hintEnabled="true"
                                style="@style/AppTheme.TextInputLayout">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/mobile"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:maxLength="10"
                                    android:maxLines="1"
                                    android:hint="@string/lang_mob_no"
                                    android:textColor="@color/textinput_text_color"
                                    android:inputType="number"/>
                            </com.google.android.material.textfield.TextInputLayout>




                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fifteen_dp"
                            app:hintEnabled="true"
                            style="@style/AppTheme.TextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/emailId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:hint="@string/email"
                                android:text="@={register.email}"
                                android:textColor="@color/textinput_text_color"
                                android:inputType="textEmailAddress"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <include
                            android:id="@+id/layout_address"
                            layout="@layout/layout_present_address"
                            bind:register="@{register}"
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/fifteen_dp"
                            android:layout_height="wrap_content"
                             />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/registerButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start"
                            android:onClick="@{() -> register.onClickRegister()}"
                            android:textSize="@dimen/twelve_sp"
                            android:gravity="start|center_vertical"
                            android:layout_marginTop="@dimen/thirty_dp"
                            android:layout_marginBottom="@dimen/thirteen_dp"
                            android:padding="@dimen/fifteen_dp"
                            style="@style/AppTheme.MaterialButton"
                            app:icon="@drawable/forward_arrow"
                            app:iconGravity="end" />




                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>

            <!--</androidx.appcompat.widget.LinearLayoutCompat>-->

        </androidx.core.widget.NestedScrollView>
     </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>